tests/negative/ownership/return_moved.tx
// Negative test: returning already-moved variable
// Expected: E0103 Use of moved variable

class Data { x: int32; }

function broken(): Data {
    let d = new Data();
    let consumed = d;  // d moved via assignment
    return d;          // ERROR: d already moved to consumed
}

function main() {
    let result = broken();
}
